--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,12 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <!---->
+
+
+
+
+    <!--FACEBOOK-->
+    <string name="facebook_app_id">125450491526066</string>
+    <string name="fb_login_protocol_scheme">fb125450491526066</string>
+    <!--FACEBOOK-->
 </resources>
