--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Foodle</string>
+    <string name="app_name" translatable="false">Foodle</string>
     <string name="action_settings">Settings</string>
     <string name="GoogleApiKey" translatable="false">AIzaSyA0hQfTfzqvzll1Ee7zeFbYDMLqmQFJuB0</string>
     <string name="action_add_favourite">Add to Favourites</string>
@@ -27,7 +27,7 @@
     <!--FACEBOOK-->
     <string name="facebook_app_id" translatable="false">125450491526066</string>
     <string name="fb_login_protocol_scheme" translatable="false">fb125450491526066</string>
-    <string name="title_activity_test_maps">Map</string>
+    <string name="title_activity_test_maps" translatable="false">Map</string>
     <!--FACEBOOK-->
 
     <!--QUIT APP-->
